--- a/mycss/style.css
+++ b/mycss/style.css
@@ -2,27 +2,37 @@
   font-family: "Poppins", sans-serif;
 }
 
-.navbar-laracamp nav {
-  height: 100px;
+:root {
+  --main-color: #7839F3;
+  --ijo-color: #31B380;
+  --hitam-color: #211B3D;
 }
-.navbar-laracamp nav .navbar-brand {
+
+.navbar-laracamp nav .container-navbar {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.navbar-laracamp nav .container-navbar .navbar-brand {
   margin-right: 51px;
 }
-.navbar-laracamp nav .collapse ul .nav-item {
+.navbar-laracamp nav .container-navbar .collapse ul .nav-item {
   margin-right: 30px;
 }
-.navbar-laracamp nav .collapse ul .nav-item .nav-link {
+.navbar-laracamp nav .container-navbar .collapse ul .nav-item .nav-link {
   font-weight: 400;
   font-size: 16px;
   color: #211B3D;
 }
-.navbar-laracamp nav .collapse ul .nav-item .active {
-  color: #7839F3;
+.navbar-laracamp nav .container-navbar .collapse ul .nav-item :hover {
+  color: var(--main-color);
 }
-.navbar-laracamp nav .collapse .d-flex .btn-sign-in {
+.navbar-laracamp nav .container-navbar .collapse ul .nav-item .active {
+  color: var(--main-color);
+}
+.navbar-laracamp nav .container-navbar .collapse .d-flex .btn-sign-in {
   background-color: #F5EFFF;
   border-color: #ECE3FE;
-  color: #7839F3;
+  color: var(--main-color);
   border-radius: 50px;
   padding-top: 7px;
   padding-bottom: 7px;
@@ -31,8 +41,8 @@
   font-weight: 500;
   font-size: 16px;
 }
-.navbar-laracamp nav .collapse .d-flex .btn-success {
-  background-color: #7839F3;
+.navbar-laracamp nav .container-navbar .collapse .d-flex .btn-success {
+  background-color: var(--main-color);
   border-radius: 50px;
   padding-top: 7px;
   padding-bottom: 7px;
@@ -41,5 +51,91 @@
   margin-left: 20px;
   font-weight: 500;
   font-size: 16px;
-  border-color: #7839F3;
+  border-color: var(--main-color);
+}
+.navbar-laracamp nav .container-navbar .collapse .welcome-user span {
+  margin-right: 10px;
+}
+.navbar-laracamp nav .container-navbar .collapse .welcome-user .img-user {
+  height: 50px;
+  width: 50px;
+}
+
+.hero-section {
+  margin-top: 80px;
+}
+.hero-section .row .content-hero span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #31B380;
+}
+.hero-section .row .content-hero .hero-title {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 42px;
+  font-weight: 600;
+}
+.hero-section .row .content-hero .hero-title span {
+  color: var(--main-color);
+  font-size: 42px;
+  font-weight: 600;
+}
+.hero-section .row .content-hero .desc {
+  font-weight: 400;
+  font-size: 16px;
+  color: #5B5575;
+  margin-bottom: 30px;
+}
+.hero-section .row .content-hero .btn-get-started {
+  background-color: var(--main-color);
+  color: white;
+  border-radius: 50px;
+  border-color: var(--main-color);
+  width: 150px;
+}
+@media (max-width: 912px) {
+  .hero-section .row .hero-image {
+    margin-top: 30px;
+  }
+}
+
+.support {
+  margin-top: 60px;
+  margin-bottom: 80px;
+}
+
+.benefits {
+  margin-bottom: 100px;
+}
+.benefits .title-benefits span {
+  font-weight: 600;
+  font-size: 16px;
+  color: var(--ijo-color);
+}
+.benefits .title-benefits .sub-title {
+  font-weight: 600;
+  font-size: 30px;
+  margin-top: 8px;
+}
+.benefits .varian-benefits {
+  margin-top: 70px;
+}
+.benefits .varian-benefits .row .varian img {
+  margin-bottom: 20px;
+}
+.benefits .varian-benefits .row .varian span {
+  font-weight: 500;
+  font-size: 20px;
+  color: var(--hitam-color);
+}
+.benefits .varian-benefits .row .varian .varian-content {
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #5B5575;
+}
+@media (max-width: 912px) {
+  .benefits .varian-benefits .row .varian {
+    margin-bottom: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
