--- a/mycss/style.css
+++ b/mycss/style.css
@@ -6,6 +6,12 @@
   --main-color: #7839F3;
   --ijo-color: #31B380;
   --hitam-color: #211B3D;
+  --hitam-desc-color: #5B5575;
+  --semibold-fw: 600;
+  --regular-fw: 400;
+  --medium-fw: 500;
+  --bg-color-secondary: #F5EFFF;
+  --border-color: #ECE3FE;
 }
 
 .navbar-laracamp nav .container-navbar {
@@ -138,4 +144,80 @@
   .benefits .varian-benefits .row .varian {
     margin-bottom: 20px;
   }
+}
+
+.career .row {
+  margin-bottom: 80px;
+}
+.career .row .img-career img {
+  margin-right: 120px;
+}
+@media (max-width: 912px) {
+  .career .row .img-career img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+}
+.career .row .content-career .desc-career span {
+  font-weight: var(--semibold-fw);
+  font-size: 16px;
+  color: var(--ijo-color);
+}
+.career .row .content-career .desc-career .title {
+  margin-top: 8px;
+  font-weight: var(--semibold-fw);
+  font-size: 30px;
+  color: var(--hitam-color);
+}
+.career .row .content-career .desc-career .desc {
+  font-weight: var(--regular-fw);
+  font-size: 16px;
+  color: var(--hitam-desc-color);
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.career .row .content-career .desc-career .btn-career {
+  background-color: var(--bg-color-secondary);
+  border-color: var(--border-color);
+  color: var(--main-color);
+  font-weight: var(--medium-fw);
+  border-radius: 50px;
+  width: 150px;
+  font-size: 16px;
+}
+
+.investment {
+  margin-bottom: 70px;
+  background-color: #4D1DAB;
+  padding-bottom: 70px;
+  padding-top: 70px;
+}
+.investment .container .row .invest-content .desc-content span {
+  font-weight: var(--semibold-fw);
+  font-size: 16px;
+  color: var(--ijo-color);
+}
+.investment .container .row .invest-content .desc-content .title {
+  margin-top: 8px;
+  font-weight: var(--semibold-fw);
+  font-size: 30px;
+  color: white;
+}
+.investment .container .row .invest-content .desc-content .desc {
+  color: #CBB0FF;
+  font-weight: var(--regular-fw);
+  font-size: 16px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.investment .container .row .invest-content .desc-content .btn-silabus {
+  color: white;
+  width: 160px;
+  background-color: var(--ijo-color);
+  border-color: var(--ijo-color);
+  border-radius: 50px;
+  font-weight: var(--medium-fw);
+  font-size: 16px;
 }/*# sourceMappingURL=style.css.map */
