--- a/mycss/style.scss
+++ b/mycss/style.scss
@@ -6,6 +6,12 @@
     --main-color: #7839F3;
     --ijo-color: #31B380;
     --hitam-color: #211B3D;
+    --hitam-desc-color: #5B5575;
+    --semibold-fw: 600;
+    --regular-fw: 400;
+    --medium-fw: 500;
+    --bg-color-secondary: #F5EFFF;
+    --border-color: #ECE3FE;
 }
 
 // Navbar
@@ -201,3 +207,122 @@
     }
 }
 // End Benefits
+
+
+// Career
+.career{
+    .row{
+
+        margin-bottom: 80px;
+
+        .img-career{
+            img{
+                margin-right: 120px;
+            }
+        }
+
+        @media (max-width: 912px) {
+            .img-career{
+                img{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    margin-bottom: 30px;
+                }
+            }
+        }
+
+        .content-career{
+
+            // display: flex;
+            // align-items: center;
+
+            .desc-career{
+
+                span{
+                    font-weight: var(--semibold-fw);
+                    font-size: 16px;
+                    color: var(--ijo-color);
+                }
+
+                .title{
+                    margin-top: 8px;
+                    font-weight: var(--semibold-fw);
+                    font-size: 30px;
+                    color: var(--hitam-color);
+                }
+
+                .desc{
+                    font-weight: var(--regular-fw);
+                    font-size: 16px;
+                    color: var(--hitam-desc-color);
+                    margin-top: 30px;
+                    margin-bottom: 30px;
+                }
+
+                .btn-career{
+                    background-color: var(--bg-color-secondary);
+                    border-color: var(--border-color);
+                    color: var(--main-color);
+                    font-weight: var(--medium-fw);
+                    border-radius: 50px;
+                    width: 150px;
+                    font-size: 16px;
+                }
+
+            }
+        }
+    }
+}
+// End Career
+
+
+// Investment
+.investment{
+    margin-bottom: 70px;
+    background-color: #4D1DAB;
+    padding-bottom: 70px;
+    padding-top: 70px;
+
+    .container{
+        .row{
+            .invest-content{
+                .desc-content{
+
+                    span{
+                        font-weight: var(--semibold-fw);
+                        font-size: 16px;
+                        color: var(--ijo-color);
+                    }
+
+                    .title{
+                        margin-top: 8px;
+                        font-weight: var(--semibold-fw);
+                        font-size: 30px;
+                        color: white;
+                    }
+
+                    .desc{
+                        color: #CBB0FF;
+                        font-weight: var(--regular-fw);
+                        font-size: 16px;
+                        margin-top: 30px;
+                        margin-bottom: 30px;
+                    }
+
+                    .btn-silabus{
+                        color: white;
+                        width: 160px;
+                        background-color: var(--ijo-color);
+                        border-color: var(--ijo-color);
+                        border-radius: 50px;
+                        font-weight: var(--medium-fw);
+                        font-size: 16px;
+                    }
+
+                }
+            }
+        }
+    }
+}
+// End Investment
